--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 database:
-  url: jdbc:mysql://localhost:3306/mcplugin_dev
+  url: jdbc:mysql://localhost:3306/mcplugin
   user: mcplugin
   password: mc123
+development_mode: false
