Update signatures. - Added colored Terracotta to signature materials - Allow a layer below the warp stone (3x3) to be a part of signature - Allow all adjacent blocks (including diagonal) as part of signature - Fix database creation script - Added automatic table creation

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
 	repositories {
+		jcenter()
 		mavenCentral()
 	}
 }
 
 apply plugin: 'java'
 
-version = '1.3'
+version = '1.4'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -32,4 +33,3 @@ repositories {
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 }
-
